<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">ACGPanel</string>
    <string name="welcomeText">Kosketa ruutua aloittaaksesi ›</string>
    <string name="arrowDown">Nuoli alas</string>
    <string name="showIdCard">Näytä ID-kortti</string>
    <string name="logo">Etra logo</string>
    <string name="userGreeting">Tervetuloa\n%1$s</string>
    <string name="menu">Valikko</string>
    <string name="profileName">Matti Meikäläinen</string>
    <string name="ok">OK</string>
    <string name="cancel">Peruuta</string>
    <string name="unlockCode">Syötä huoltokoodi</string>
    <string name="browse_products">Valitse tuotteet</string>
    <string name="support">Apu 24/7</string>
    <string name="layout">Kartta</string>
    <string name="notImplemented">Toimintoa ei ole vielä toteutettu</string>
    <string name="profile">Profiili</string>
    <string name="logout">Kirjaudu ulos</string>
    <string name="profile_name">Nimi</string>
    <string name="profile_expenditure">Kustannuspaikka</string>
    <string name="browse_products_without_login">Selaa tuotteita kirjautumatta</string>
    <string name="accept_vend">Hyväksy otto</string>
    <string name="num_products">%1$d tuotetta</string>
    <string name="basket_product_title">%2$d %3$s %1$s</string>
    <string name="basket_product_details">kustannuspaikka: %1$s, lisäviite: %2$s</string>
    <string name="vend">Otto</string>
    <string name="select_another">Ota lisää</string>
    <string name="basket_item_placeholder">\???</string>
    <string name="notifications_name">ACGPanel notifications</string>
    <string name="mcu_communication_title">Laiteviestintä</string>
    <string name="mcu_communication_desc">Laiteviestintä käynnissä</string>
    <string name="server_sync_title">Serverisynkronointi</string>
    <string name="server_sync_desc">Serverisynkronointi käynnissä</string>
    <string name="title_activity_acg_panel_settings">ACGPanel asetukset</string>
    <string name="pref_header_general">Yleiset</string>
    <string name="pref_key_vending_machine_id">vending_machine_id</string>
    <string name="pref_title_vending_machine_id">Automaatin tunnus</string>
    <string name="pref_default_vending_machine_id">0</string>
    <string name="pref_default_password" />
    <string name="pref_key_password">password</string>
    <string name="pref_title_password">Salasana</string>
    <string name="input_count">Anna määrä</string>
    <string name="expenditure">Kustannuspaikka</string>
    <string name="reference">Lisäviite</string>
    <string name="pick_up_products">Nouda tuotteet, ole hyvä</string>
    <string name="complete_by_closing_door">Luukku %1$d/%2$d auki. Otto päättyy, kun suljet viimeisen luukun.</string>
    <string name="modify_checkout">Muokkaa ottoa</string>
    <string name="edit">Muokkaa</string>
    <string name="product">Tuote</string>
    <string name="default_unit">kpl</string>
    <string name="pref_key_demo_mode">demo_mode</string>
    <string name="pref_title_demo_mode">Esittelytila</string>
    <string name="input_expenditure">Syötä kustannuspaikka</string>
    <string name="input_reference">Syötä lisäviite</string>
    <string name="not_logged_in_warning">⚠ Näytä korttia jatkaaksesi</string>
    <string name="not_calibrated_warning">⚠ Tuotetta ei ole kalibroitu</string>
    <string name="invalid_card">KORTTI EI KELPAA</string>
    <string name="invalid_card_symbol">⛔</string>
    <string name="pref_key_server_address">server_address</string>
    <string name="pref_title_server_address">Palvelimen osoite</string>
    <string name="pref_key_maintenance_passcode">maintenance_passcode</string>
    <string name="pref_title_maintenance_passcode">Huoltokoodi</string>
    <string name="device_error">Laitevika. Jos ongelma ei poistu, ota yhteyttä huoltoon.</string>
    <string name="door_open_alarm">⚠️ Luukut ovat auki!</string>
    <string name="pref_key_user_expenditure">user_expenditure</string>
    <string name="pref_title_user_expenditure">Lukitse käyttäjäkohtainen kustannuspaikka</string>
    <string name="pref_key_user_reference">user_reference</string>
    <string name="pref_title_user_reference">Lukitse käyttäjäkohtainen lisäviite</string>
    <string name="pref_key_browser_credentials">browser_credentials</string>
    <string name="pref_title_browser_credentials">Selaimen tunnukset</string>
    <string name="pref_key_enable_browser">enable_browser</string>
    <string name="pref_title_enable_browser">Käytä karttaselainta</string>
    <string name="quick_pick">Pikaotto</string>
    <string name="count">Määrä</string>
    <string name="line">Linja</string>
    <string name="prompt_text">Ohjeteksti</string>
    <string name="next">Seuraava</string>
    <string name="shelving">HYLLYTYS: %1$s</string>
    <string name="unit_placeholder">kpl</string>
    <string name="not_owner">Ohjelmaa ei ole määritelty laitteen omistajaksi</string>
    <string name="pref_key_update_interval">update_interval</string>
    <string name="pref_title_update_interval">Päivitystiheys</string>
    <string name="pref_key_user_asset_url">user_asset_url</string>
    <string name="pref_key_developer_mode">developer_mode</string>
    <string name="pref_title_developer_mode">Kehittäjätila</string>
    <string name="safety_card_placeholder" tools:ignore="TypographyEllipsis">...</string>
    <string name="pref_key_carousel_slide_interval">carousel_slide_interval</string>
    <string name="pref_title_carousel_slide_interval">Sisällön vaihtoväli aloitusnäytössä</string>
    <!-- {@deprecated use pref_key_card_reader_type instead} -->
    <string name="pref_key_wiegand_profile_1">use_wiegand</string>
    <!-- {@deprecated use pref_key_card_reader_type instead} -->
    <string name="pref_key_wiegand_profile_2">wiegand_profile_1</string>
    <string name="pref_title_wiegand_profile_1">Käytä Wiegand-kortinlukijaa (profiili 1)</string>
    <string name="pref_title_wiegand_profile_2">Käytä Wiegand-kortinlukijaa (profiili 2)</string>
    <string name="hint_only_edit_open_locker">Vain avoimen lokeron tuotemäärää voi muokata.</string>
    <string name="pref_key_software_update_url">software_update_url</string>
    <string name="pref_title_software_update_url">Ohjelmistopäivitysten sijainti</string>
    <string name="time_left">%1$s jäljellä</string>
    <string name="pref_key_timeout_in_s">timeout_in_s</string>
    <string name="pref_title_timeout_in_s">Istunnon kesto (sekunteina)</string>
    <string name="import_password_prompt_text">Aseta saamasi salasanamuistitikku laitteeseen ja paina alla olevaa nappia.</string>
    <string name="import_password_button_text">Tuo salasana</string>
    <string name="password_extracted">Salasana tuotu.</string>
    <string name="test_shelf_id">Ohjausyksikön ID:</string>
    <string name="test_program">Ohjelmoi</string>
    <string name="test_open_locker">Avaa luukku</string>
    <string name="test_open_all">Kaikki</string>
    <string name="test_cancel">Peruuta</string>
    <string name="test_open_current">Nykyinen yksikkö</string>
    <string name="test_server_connection">Serveriyhteys</string>
    <string name="test_server_connection_button">Testaa</string>
    <string name="test_server_connection_not_tested">Ei testattu</string>
    <string name="test_invalid_shelf_id">Ohjausyksikön ID ei kelpaa</string>
    <string name="test_open_locker_message">Lokero %1$d:%2$d auki</string>
    <string name="test_open_canceled">Avaus peruutettiin</string>
    <string name="test_connection_succeeded">Yhteys onnistui</string>
    <string name="test_connection_failed">Yhteys epäonnistui</string>
    <string name="out_of_products_message">Onko tuote loppu?</string>
    <string name="out_of_products_title">Tuotteen poisto korista</string>
    <string name="line_empty">Linja tyhjä</string>
    <string name="yes">Kyllä</string>
    <string name="no">Ei</string>
    <string name="pref_key_lights_timeout_in_s">lights_timeout_in_s</string>
    <string name="pref_key_lights_low_intensity">lights_low_intensity</string>
    <string name="pref_key_lights_high_intensity">lights_high_intensity</string>
    <string name="pref_title_lights_timeout_in_s">Valojen sammumisaika (s)</string>
    <string name="pref_title_lights_low_intensity">Valojen lepokirkkaus (0–100)</string>
    <string name="pref_title_lights_high_intensity">Valojen aktiivinen kirkkaus (0–100)</string>
    <string name="pref_title_user_asset_url">Kuvien ja dokumenttien osoite</string>
    <string name="pref_key_pick_user_expenditure">pick_user_expenditure</string>
    <string name="pref_title_pick_user_expenditure">Valitse kustannuspaikka listalta</string>
    <string name="product_selection_borrow">Lainaa</string>
    <string name="product_selection_return">Palauta</string>
    <string name="basket_product_details_borrow">Lainaus\nkustannuspaikka: %1$s, lisäviite: %2$s</string>
    <string name="basket_product_details_return">Palautus\nkustannuspaikka: %1$s, lisäviite: %2$s</string>
    <string name="pickup_products">Ota lokerosta seuraavat tuotteet</string>
    <string name="putin_products">Aseta lokeroon seuraavat tuotteet</string>
    <string name="line_borrowed">Lainassa</string>
    <string name="profile_borrows">Lainaukset</string>
    <string name="profile_no_borrows">Ei lainauksia</string>
    <string name="pref_key_show_stock">show_stock</string>
    <string name="pref_title_show_stock">Näytä saldot</string>
    <string name="pref_key_card_reader_type">card_reader_type</string>
    <string name="pref_title_card_reader_type">Kortinlukijan tyyppi</string>
    <string name="return_product_is">Tuote on</string>
    <string name="return_product_ok">Kunnossa</string>
    <string name="return_product_broken">Rikki</string>
    <string name="return_product_prompt">Mikä tuotteessa on vikana?</string>
    <string name="return_requires_maintenance">Vaatii huoltoa</string>
    <string name="return_physically_broken">Fyysisesti rikki</string>
    <string name="return_product_unknown">Ei tietoa</string>
</resources>
