<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_default_vending_machine_id"
        android:inputType="text"
        android:key="@string/pref_key_vending_machine_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_vending_machine_id" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_password"
        android:inputType="textPassword"
        android:key="@string/pref_key_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />

    <EditTextPreference
        android:inputType="text"
        android:key="@string/pref_key_server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_server_address" />

    <CheckBoxPreference
        android:key="@string/pref_key_demo_mode"
        android:defaultValue="true"
        android:title="@string/pref_title_demo_mode" />

    <EditTextPreference
        android:inputType="text"
        android:key="@string/pref_key_maintenance_passcode"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_maintenance_passcode" />

    <EditTextPreference
        android:inputType="text"
        android:key="@string/pref_key_browser_credentials"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_browser_credentials" />

    <CheckBoxPreference
        android:key="@string/pref_key_enable_browser"
        android:title="@string/pref_title_enable_browser" />

    <CheckBoxPreference
        android:key="@string/pref_key_user_expenditure"
        android:title="@string/pref_title_user_expenditure" />

    <CheckBoxPreference
        android:key="@string/pref_key_user_reference"
        android:title="@string/pref_title_user_reference" />

    <EditTextPreference
        android:key="@string/pref_key_update_interval"
        android:title="@string/pref_title_update_interval"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        />

    <EditTextPreference
        android:key="@string/pref_key_user_asset_url"
        android:title="Kuvien ja dokumenttien osoite"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        />

    <CheckBoxPreference
        android:key="@string/pref_key_developer_mode"
        android:title="@string/pref_title_developer_mode"
        />

</PreferenceScreen>
