<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="600dp"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/profile"
        />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/profile_name"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <TextView
        android:id="@+id/content_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/label_name"
        app:layout_constraintTop_toTopOf="@id/label_name"
        />

    <TextView
        android:id="@+id/label_expenditure"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/profile_expenditure"
        app:layout_constraintTop_toBottomOf="@id/label_name"
        />

    <TextView
        android:id="@+id/content_expenditure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/label_expenditure"
        app:layout_constraintTop_toTopOf="@id/label_expenditure"
        />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="40sp"
        android:text="@string/ok"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/label_expenditure"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="40sp"
        android:text="@string/logout"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/ok_button"
        app:layout_constraintEnd_toStartOf="@id/ok_button"
        />

</android.support.constraint.ConstraintLayout>