<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".QuickPickActivity">

    <TextView
        android:id="@+id/vend_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/quick_pick"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/num_products_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/num_products"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/vend_label"
        app:layout_constraintLeft_toRightOf="@id/vend_label"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@id/basket_items_container"
        app:layout_constraintBottom_toTopOf="@id/basket_items_container"
        android:textSize="20sp"
        android:text="@string/line"
        android:textStyle="bold"
        android:gravity="center"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="530dp"
        app:layout_constraintLeft_toLeftOf="@id/basket_items_container"
        app:layout_constraintRight_toRightOf="@id/basket_items_container"
        app:layout_constraintBottom_toTopOf="@id/basket_items_container"
        android:textSize="20sp"
        android:text="@string/product"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginRight="330dp"
        app:layout_constraintRight_toRightOf="@id/basket_items_container"
        app:layout_constraintBottom_toTopOf="@id/basket_items_container"
        android:textSize="20sp"
        android:text="@string/expenditure"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginRight="130dp"
        app:layout_constraintRight_toRightOf="@id/basket_items_container"
        app:layout_constraintBottom_toTopOf="@id/basket_items_container"
        android:textSize="20sp"
        android:text="@string/reference"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginRight="55dp"
        app:layout_constraintRight_toRightOf="@id/basket_items_container"
        app:layout_constraintBottom_toTopOf="@id/basket_items_container"
        android:textSize="20sp"
        android:text="@string/count"
        android:textStyle="bold"
        android:gravity="center"
        />


    <ScrollView
        android:id="@+id/basket_items_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vend_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/basket_items_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            />
    </ScrollView>

    <Button
        android:id="@+id/ok_button"
        android:onClick="proceed"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_dark"
        android:text="@string/accept_vend"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        />

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/bg_dark"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/menu_button"
        android:onClick="menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/transparent"
        android:text="@string/menu"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:drawableStart="@drawable/valikko_icon"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/show_profile_button"
        android:onClick="showProfileDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/transparent"
        android:text="@string/profileName"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/profile_icon"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>