<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="600dp"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/unlockCode"
        />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textSize="100dp"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="40dp"
        android:text="@string/ok"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textSize="40dp"
        android:text="@string/cancel"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/input"
        app:layout_constraintEnd_toStartOf="@id/ok_button"
        />

</android.support.constraint.ConstraintLayout>