<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakeActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/pick_up_products"
        android:textStyle="bold"
        android:textSize="60sp"
        />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/complete_by_closing_door"
        android:textSize="30sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="140dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/takeout_products_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickup_products"
                android:textSize="40sp"
                android:background="@color/colorPrimaryLight"
                android:padding="15dp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/takeout_products_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                />
            <!-- https://pbs.twimg.com/media/BiKp7LLIIAAq1ad.jpg -->
            <TextView
                android:id="@+id/putin_products_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/putin_products"
                android:textSize="40sp"
                android:background="@color/colorPrimaryLight"
                android:padding="15dp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/putin_products_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:onClick="back"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/modify_checkout"
        android:textSize="30sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:stateListAnimator="@null"
        />

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:layout_gravity="end|right"
        />

    <TextView
        android:id="@+id/alarm_overlay_back"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/error"
        android:textColor="@color/errorContrast"
        android:text="@string/door_open_alarm"
        android:textSize="100sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/alarm_overlay_front"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/errorContrast"
        android:textColor="@color/error"
        android:text="@string/door_open_alarm"
        android:textSize="100sp"
        android:gravity="center"
        />

</FrameLayout>