<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".BasketActivity">

    <TextView
        android:id="@+id/vend_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/vend"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/num_products_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:text="@string/num_products"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/vend_label"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="SpUsage" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vend_label"
        app:layout_constraintBottom_toTopOf="@id/ok_button"
        app:layout_constraintRight_toRightOf="parent"
        >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/basket_items_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            />
    </ScrollView>

    <Button
        android:id="@+id/ok_button"
        android:onClick="proceed"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_dark"
        android:text="@string/accept_vend"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        />

    <Button
        android:id="@+id/cancel_button"
        android:onClick="cancel"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/bg_light"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/select_another_button"
        android:onClick="selectAnother"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBaseline_toBaselineOf="@id/ok_button"
        app:layout_constraintRight_toLeftOf="@id/ok_button"
        android:background="@android:color/transparent"
        android:text="@string/select_another"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>