<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/basket_item_bg"
    android:theme="@style/Theme.AppCompat.Light"
    >

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:src="@drawable/image_placeholder"
        android:contentDescription="" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="170dp"
        android:layout_marginRight="300dp"
        android:layout_marginTop="10dp"
        android:text="@string/basket_item_placeholder"
        android:textStyle="bold"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="170dp"
        android:layout_marginRight="300dp"
        android:layout_marginTop="80dp"
        android:text="@string/basket_product_details"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/product_modify_button_decal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginRight="140dp"
        android:textStyle="bold"
        android:textSize="19sp"
        android:gravity="center"
        android:text="@string/edit"
        android:background="@color/colorPrimaryLight"
        android:elevation="6dp"
        />

    <Button
        android:id="@+id/product_modify_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="end"
        android:layout_marginRight="125dp"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/product_delete_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginRight="20dp"
        android:src="@drawable/delete_icon"
        android:background="@color/colorPrimaryLight"
        android:elevation="6dp"
        android:contentDescription="" />

    <View
        android:id="@+id/disabled_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightOverlay"
        android:elevation="1000dp"
        />

</FrameLayout>
